website/versioned_docs/version-0.4/community/who-we-are.md
---
title: Who Are We?
sidebar_label: Who Are We?
---

<a name="WhoWeAre-Whoweare"></a>
# Who we are

Apache Mahout is maintained by a team of volunteer developers.

<a name="WhoWeAre-CoreCommitters"></a>
## Core Committers

(Please keep the list below in alphabetical order by first name.)

Name                    | Mail              | PMC | Comment
------------------------|------------------:|------:|---:|
Anand Avati             | avati@...         | No  | @anandavati
Andrew Musselman        | akm@...           | Yes | @akm
Andrew Palumbo          | apalumbo@...      | Yes |
Dan Filimon             | dfilimon@...      | No  |
Dmitriy Lyubimov        | dlyubimov@...     | No  | (Emeritus PMC)
Drew Farris             | drew@...          | No  | (Emeritus PMC)
Dustin VanStee          | vanstee@...       | No  |
Ellen Friedman          | ellenf@...        | No  | @Ellen_Friedman
Frank Scholten          | frankscholten@... | No  |
Gokhan Capan            | gcapan@...        | No  |
Grant Ingersoll         | gsingers@...      | No  | (Emeritus PMC) @gsingers
Guan-Ming (Wesley) Chiu | guanmingchiu@...  | Yes | @guan404ming
Holden Karau            | holden@...        | No  |
Isabel Drost-Fromm      | isabel@...        | Yes | <!--Passion for free software (development, but to some extend also the political and economic implications), interested in agile development and project management, lives in Germany. Follow me on Twitter @MaineC-->
Jacob Alexander Mannix  | jmannix@...       | Yes |
Jeff Eastman            | jeastman@...      | No  | (Emeritus PMC)
Krishna Dave            | krishnadave829@...| No  | @krishnadave
Nikolay Sakharnykh      | nsakharnykh@...   | No  |
Paritosh Ranjan         | pranjan@...       | Yes | @paritoshranjan
Pat Ferrel              | pat@...           | Yes | (Emeritus PMC) @occam
Robin Anil              | robinanil@...     | Yes |
Ryan Huang              | hcr@...           | No  | @ryankert01
Sean Owen               | srowen@...        | No  | (Emeritus PMC)
Sebastian Schelter      | ssc@...           | Yes |
Shannon Quinn           | squinn@...        | Yes | PMC Chair @magsol@quinnwitz.house
Stevo Slavić            | sslavic@...       | Yes | @sslavic
Suneel Marthi           | smarthi@...       | No  | (Emeritus PMC) @suneelmarthi
Ted Dunning             | tdunning@...      | Yes |
Tom Pierce              | tcp@...           | No  |
Trevor Grant            | rawkintrevo@...   | Yes | @rawkintrevo

<a name="WhoWeAre-EmeritusCommitters"></a>
## Emeritus Committers

* Niranjan Balasubramanian (nbalasub@...)
* Otis Gospodnetic (otis@...)
* David Hall (dlwh@...)
* Erik Hatcher (ehatcher@...)
* Ozgur Yilmazel (oyilmazel@...)
* Dawid Weiss (dweiss@...)
* Karl Wettin (kalle@...)
* Abdel Hakim Deneche (adeneche@...)
* Benson Margulies (bimargulies@...)

Note that the email addresses above end with @apache.org.

<a name="WhoWeAre-Contributors"></a>
## Contributors

Apache Mahout contributors and their contributions to individual issues can be found at Apache <a href="http://issues.apache.org/jira/browse/MAHOUT">JIRA</a>.
